vendor/pin-project-lite-0.2.6/tests/ui/pin_project/overlapping_unpin_struct.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> $DIR/overlapping_unpin_struct.rs:18:5
   |
15 | fn is_unpin<T: Unpin>() {}
   |                ----- required by this bound in `is_unpin`
...
18 |     is_unpin::<Foo<PhantomPinned>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `_::__Origin<'_, PhantomPinned>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: required because it appears within the type `_::__Origin<'_, PhantomPinned>`
   = note: required because of the requirements on the impl of `Unpin` for `Foo<PhantomPinned>`
